crates/tests/rust_snapshots/tests/snapshots/pdf__encoding_heuristic_markdown.snap
---
source: crates/tests/rust_snapshots/tests/pdf.rs
expression: normalize_markdown(&md)
---
<!-- officemd: kind=pdf profile=compact first_row_as_header=true formulas=true headers_footers=true properties=false -->

## Page: 1

Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word$Word
