crates/tests/rust_snapshots/tests/snapshots/pdf__ocr_graph_ocred_markdown.snap
---
source: crates/tests/rust_snapshots/tests/pdf.rs
expression: normalize_markdown(&md)
---
<!-- officemd: kind=pdf profile=compact first_row_as_header=true formulas=true headers_footers=true properties=false -->

## Page: 1

# sw | \ +

400 +

300 —esupport BH No vote{note 1] 200 4 t= Oppose SeNet{note 2] Percentage [note 3]
