crates/tests/rust_snapshots/tests/snapshots/pdf__ocr_tagged_textbased_markdown.snap
---
source: crates/tests/rust_snapshots/tests/pdf.rs
expression: normalize_markdown(&md)
---
<!-- officemd: kind=pdf profile=compact first_row_as_header=true formulas=true headers_footers=true properties=false -->

## Page: 1

**Table of Contents**

Heading ... 1
Page 2 Heading ... 2

# Heading

Document text.

*Table 1: Table caption*

Column 1 Column 2 Cell 1 Cell 2 Cell 3 Cell 4

## Page: 2

# Page 2 Heading

Body text.
